tests/algorithms/x/C/sorts/bucket_sort.c
// Generated by Mochi 0.10.32 on 2025-08-23 21:18 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>
#include <math.h>

size_t set_at_float_len;
size_t set_at_list_float_len;
size_t *set_at_list_float_lens;
size_t sort_float_len;
size_t bucket_sort_with_count_len;
size_t bucket_sort_len;

size_t append_len;
static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_list_double(const double *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[64];
        snprintf(tmp, sizeof(tmp), "%g", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

static double* list_append_double(double *arr, size_t *len, double val) {
    arr = realloc(arr, (*len + 1) * sizeof(double));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static long long** list_append_intptr(long long **arr, size_t *len, long long *val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static double** list_append_doubleptr(double **arr, size_t *len, double *val) {
    arr = realloc(arr, (*len + 1) * sizeof(double*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static size_t* list_append_szt(size_t *arr, size_t *len, size_t val) {
    arr = realloc(arr, (*len + 1) * sizeof(size_t));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

double int_to_float(long long x);
long long floor_int(double x);
double * set_at_float(double * xs, size_t xs_len, long long idx, double value);
double * * set_at_list_float(double * * xs, size_t xs_len, size_t* xs_lens, size_t xs_lens_len, long long idx, double * value, size_t value_len);
double * sort_float(double * xs, size_t xs_len);
double * bucket_sort_with_count(double * xs, size_t xs_len, long long bucket_count);
double * bucket_sort(double * xs, size_t xs_len);
int main(void);

double int_to_float(long long x) {
    return x * 1.0;
}

long long floor_int(double x) {
    long long i = 0LL;
    while (int_to_float(i + 1LL) <= x) {
        i = i + 1LL;
    }
    return i;
}

double * set_at_float(double * xs, size_t xs_len, long long idx, double value) {
    long long i = 0LL;
    double *res = NULL;
    size_t res_len = 0;
    while (i < xs_len) {
        if (i == idx) {
            res = list_append_double_new(res, res_len, value);
            res_len++;
        } else {
            res = list_append_double(res, &res_len, xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})]);
        }
        i = i + 1LL;
    }
    return set_at_float_len = res_len, res;
}

double * * set_at_list_float(double * * xs, size_t xs_len, size_t* xs_lens, size_t xs_lens_len, long long idx, double * value, size_t value_len) {
    long long i = 0LL;
    double **res = NULL;
    size_t res_len = 0;
    size_t *res_lens = NULL;
    size_t res_lens_len = 0;
    while (i < xs_len) {
        if (i == idx) {
            res = list_append_doubleptr(res, &res_len, value);
            res_lens = list_append_szt(res_lens, &res_lens_len, value_len);
        } else {
            res = list_append_doubleptr(res, &res_len, xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})]);
            res_lens = list_append_szt(res_lens, &res_lens_len, xs_lens[(int)(i)]);
        }
        i = i + 1LL;
    }
    return set_at_list_float_lens = res_lens, set_at_list_float_len = res_len, res;
}

double * sort_float(double * xs, size_t xs_len) {
    double *res = xs;
    size_t res_len = xs_len;
    long long i = 1LL;
    while (i < res_len) {
        double key = res[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? res_len + _mochi_idx : _mochi_idx;})];
        long long j = i - 1LL;
        while ((j >= 0LL) && (res[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? res_len + _mochi_idx : _mochi_idx;})] > key)) {
            res = set_at_float(res, res_len, j + 1LL, res[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? res_len + _mochi_idx : _mochi_idx;})]);
            res_len = set_at_float_len;
            j = j - 1LL;
        }
        res = set_at_float(res, res_len, j + 1LL, key);
        res_len = set_at_float_len;
        i = i + 1LL;
    }
    return sort_float_len = res_len, res;
}

double * bucket_sort_with_count(double * xs, size_t xs_len, long long bucket_count) {
    if ((xs_len == 0LL) || (bucket_count <= 0LL)) {
        {
            double* __tmp5_data = malloc(0 * sizeof(double));
            bucket_sort_with_count_len = 0;
            return __tmp5_data;
        }
    }
    double min_value = xs[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})];
    double max_value = xs[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})];
    long long i = 1LL;
    while (i < xs_len) {
        if (xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})] < min_value) {
            min_value = xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})];
        }
        if (xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})] > max_value) {
            max_value = xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})];
        }
        i = i + 1LL;
    }
    if (max_value == min_value) {
        return bucket_sort_with_count_len = xs_len, xs;
    }
    double bucket_size = (max_value - min_value) / int_to_float(bucket_count);
    double **buckets = NULL;
    size_t buckets_len = 0;
    size_t *buckets_lens = NULL;
    size_t buckets_lens_len = 0;
    i = 0LL;
    while (i < bucket_count) {
        buckets = list_append_doubleptr(buckets, &buckets_len, ({double* tmp = malloc(0 * sizeof(double)); tmp;}));
        buckets_lens = list_append_szt(buckets_lens, &buckets_lens_len, 0);
        i = i + 1LL;
    }
    i = 0LL;
    while (i < xs_len) {
        double val = xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})];
        long long idx = floor_int((val - min_value) / bucket_size);
        if (idx < 0LL) {
            idx = 0LL;
        }
        if (idx >= bucket_count) {
            idx = bucket_count - 1LL;
        }
        double *bucket = buckets[(int)({long long _mochi_idx = idx; _mochi_idx < 0 ? buckets_len + _mochi_idx : _mochi_idx;})];
        size_t bucket_len = buckets_lens[(int)(idx)];
        bucket = list_append_double(bucket, &bucket_len, val);
        buckets = set_at_list_float(buckets, buckets_len, buckets_lens, buckets_len, idx, bucket, bucket_len);
        buckets_len = set_at_list_float_len;
        buckets_lens = set_at_list_float_lens;
        i = i + 1LL;
    }
    double *result = NULL;
    size_t result_len = 0;
    i = 0LL;
    while (i < buckets_len) {
        double *sorted_bucket = sort_float(buckets[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? buckets_len + _mochi_idx : _mochi_idx;})], buckets_lens[(int)(i)]);
        size_t sorted_bucket_len = sort_float_len;
        long long j = 0LL;
        while (j < sorted_bucket_len) {
            result = list_append_double(result, &result_len, sorted_bucket[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? sorted_bucket_len + _mochi_idx : _mochi_idx;})]);
            j = j + 1LL;
        }
        i = i + 1LL;
    }
    return bucket_sort_with_count_len = result_len, result;
}

double * bucket_sort(double * xs, size_t xs_len) {
    {
        double* __ret6 = bucket_sort_with_count(xs, xs_len, 10LL);
        bucket_sort_len = bucket_sort_with_count_len;
        return __ret6;
    }
}

int main(void) {
    {
        long long __start = _now();
        puts(({double *__tmp7 = bucket_sort((double[]){-1.0, 2.0, -5.0, 0.0}, 4); char *__res = str_list_double(__tmp7, bucket_sort_len); __res;}));
        puts(({double *__tmp8 = bucket_sort((double[]){9.0, 8.0, 7.0, 6.0, -12.0}, 5); char *__res = str_list_double(__tmp8, bucket_sort_len); __res;}));
        puts(({double *__tmp9 = bucket_sort((double[]){0.4, 1.2, 0.1, 0.2, -0.9}, 5); char *__res = str_list_double(__tmp9, bucket_sort_len); __res;}));
        puts(({double *__tmp10 = bucket_sort(NULL, 0); char *__res = str_list_double(__tmp10, bucket_sort_len); __res;}));
        puts(({double *__tmp11 = bucket_sort((double[]){-1e+10, 1e+10}, 2); char *__res = str_list_double(__tmp11, bucket_sort_len); __res;}));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
